--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.example.rui.mystock"
+        applicationId "com.chandler.red.mystock"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
