--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,13 @@ android {
         applicationId "com.chandler.red.mystock"
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -25,15 +30,15 @@ dependencies {
     implementation files('lib/pinyin4j-2.5.0.jar')
     implementation project(':LRecyclerview_library')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'cn.bingoogolapple:bga-swipebacklayout:1.2.0@aar'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.timehop.stickyheadersrecyclerview:library:[0.4.3]@aar'
     implementation 'com.huxq17.xrefreshview:xrefreshview:3.6.9'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:9.0.0-rc2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'com.google.code.gson:gson:2.8.1'
